fixed spacing issue on bio page text for desktop sized screens

--- a/src/css/bio.css
+++ b/src/css/bio.css
@@ -30,6 +30,7 @@
     .bio-post-content {
         margin-top: 40px;
         margin-left: 10px;
+        padding-left: 0;
     }
 
 }
